# tappty

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  publish.yml
demos/: README.md  color_chart.py  drive_vim.py  matrix_rain.py  mission_control.py  web_demo.py
demos/recordings/: drive_vim.cast
docs/: DESIGN.md  GALLERY.md  HANDOFF.md  HISTORY.md  LICENSE.md  README.md  REFERENCE.md  TAPTERM.md  WINDOWS.md  gallery.md
docs/reviews/: 01-concurrency-lifecycle.md  02-cross-platform.md  03-terminal-fidelity.md  04-protocol-api-contract.md  05-test-quality-flakiness.md  06-performance-resource.md  07-packaging-release.md  08-ux-input.md  README.md
examples/: README.md  bus_capture.py  color_chart.py  custom_source.py  matrix_rain.py  mission_control.py  observe_tap.py  watch_and_drive.py
examples/recordings/: cbonsai.cast  nyancat.cast
gh-pages/: build_site.py  screenshots.py  site.json
gh-pages/assets/: site.css
gh-pages/public/: index.html
gh-pages/public/assets/: site.css
gh-pages/public/changelog/: index.html
gh-pages/public/design/: index.html
gh-pages/public/docs/: index.html
gh-pages/public/gallery/: index.html
gh-pages/public/guide/: index.html
gh-pages/public/license/: index.html
gh-pages/public/reference/: index.html
gh-pages/templates/: doc.html  home.html  page.html
packaging/: build-dists.sh
packaging/tapterm/: README.md  pyproject.toml
src/tappty/: __init__.py  arcade_ui.py  bus.py  cli.py  compositor.py  curses_ui.py  keys.py  pygame_ui.py  pyte_terminal.py  recorder.py  session.py  source.py  style.py  terminal.py  video.py  web_ui.py
tests/: test_arcade_smoke.py  test_bus_cmd.py  test_bus_security.py  test_bus_socket.py  test_bus_tcp.py  test_cast_source.py  test_cli.py  test_compositor_backings.py  test_compositor_view.py  test_curses_viewport.py  test_demos_smoke.py  test_error_handling.py  test_examples.py  test_examples_smoke.py  test_gui_smoke.py  test_keys.py  test_pipe_source.py  test_pty_source.py  test_pyte_terminal.py  test_recorder.py  test_session_bus.py  test_session_echo.py  test_source_encoding.py  test_style.py  test_talking_stick.py  test_term.py  test_video.py  test_video_bounds.py  test_web_ui.py
