[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tappty"
version = "0.1.0"
description = "Host a program on a pseudo-terminal, then observe/control/render it (CUI or GUI)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nicholas J. Kisseberth" }]
keywords = ["terminal", "pty", "curses", "pygame", "tui", "vt52", "emulator", "instrumentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]

[project.optional-dependencies]
gui = ["pygame-ce"]            # the maintained community fork (drop-in `import pygame`); CI-tested
ansi = ["pyte"]                # full-ANSI/VT100+ Terminal backend (PyteTerminal); LGPLv3
win = ['pywinpty; platform_system == "Windows"']   # ConPtySource (Windows pseudo-console)
dev = ["pytest", "ruff"]

[project.scripts]
tapterm = "tappty.cli:main"

[project.urls]
Homepage = "https://github.com/nkissebe/tappty"
Source = "https://github.com/nkissebe/tappty"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 99               # matches the codebase's natural width (max line was 98)
target-version = "py39"        # tracks requires-python

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]   # pycodestyle, pyflakes, isort, bugbear, pyupgrade

[tool.ruff.lint.isort]
known-first-party = ["tappty"]
