[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tappty"
version = "0.1.0"
description = "Host a program on a pseudo-terminal, then observe/control/render it (CUI or GUI)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nicholas J. Kisseberth" }]
keywords = ["terminal", "pty", "curses", "pygame", "tui", "vt52", "emulator", "instrumentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Environment :: X11 Applications",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]

[project.optional-dependencies]
gui = ["pygame-ce"]            # the maintained community fork (drop-in `import pygame`); CI-tested
arcade = ["arcade"]            # the arcade_ui renderer (pyglet/OpenGL); needs a GL context
web = ["websockets"]           # the web_ui renderer (browser over a websocket)
video = ["imageio-ffmpeg"]     # render_video without a system ffmpeg (bundles an ffmpeg binary)
ansi = ["pyte"]                # full-ANSI/VT100+ Terminal backend (PyteTerminal); LGPLv3
win = [                                              # Windows-native support
    'pywinpty; platform_system == "Windows"',        #   ConPtySource (Windows pseudo-console)
    'windows-curses; platform_system == "Windows"',  #   curses_ui CUI (stdlib ships no curses on Windows)
]
dev = ["pytest", "ruff"]

[project.scripts]
tapterm = "tappty.cli:main"

[project.urls]
Homepage = "https://github.com/nyxbitco/tappty"
Documentation = "https://nyxbitco.github.io/tappty/"
Source = "https://github.com/nyxbitco/tappty"
Changelog = "https://github.com/nyxbitco/tappty/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 99               # matches the codebase's natural width (max line was 98)
target-version = "py39"        # tracks requires-python

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]   # pycodestyle, pyflakes, isort, bugbear, pyupgrade

[tool.ruff.lint.isort]
known-first-party = ["tappty"]
