[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# `tapterm` is a convenience alias distribution: it ships NO code, it just depends on
# `tappty`, which provides the `tapterm` command (entry point tappty.cli:main). So
# `pip install tapterm` does the same thing as `pip install tappty`. The real project,
# the library, and all the extras live under the name `tappty`. See ../../README.md.
[project]
name = "tapterm"
version = "0.1.0"
description = "Installs tappty, which provides the `tapterm` instrumented-terminal command."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nicholas J. Kisseberth" }]
keywords = ["terminal", "pty", "curses", "pygame", "tui", "instrumentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = ["tappty>=0.1.0"]

[project.urls]
Homepage = "https://github.com/nyxbitco/tappty"
Documentation = "https://nyxbitco.github.io/tappty/"
Source = "https://github.com/nyxbitco/tappty"
Changelog = "https://github.com/nyxbitco/tappty/blob/main/CHANGELOG.md"

# Metadata-only: there is intentionally no importable module here -- the command comes
# from the `tappty` dependency. `py-modules = []` tells setuptools that's deliberate.
[tool.setuptools]
py-modules = []
